simple layoud made

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>test</h1>
+    <h1 class="title">Discount Calculator</h1>
+    <div class="grid-container">
+        <p class= "">Original Price $: <input maxlength="2" type="number" id ="principle" min="0" value =""></input></p>
+        <p class= "">Discount: <input maxlength="3" type="number" id ="principle" min="0" max ="100" value =""></input>%</p>
+
+        <p class= "">New Price $: </p>
+        <p class= "">You Save $: </p>
+       
+    </div>
+    <!-- <div class="grid-container"></div> -->
     <h2 id="type-s"></h2>
   </body>
-  <!-- <script src="./js.js"></script> -->
-  <!-- <script src="./scripts.ts"></script> -->
   <script src="script.js"></script>
-  <!-- <script type="text/javascript" src="typescript.min.js"></script>
-  <script type="text/javascript" src="typescript.compile.min.js"></script> -->
+  <link rel="stylesheet" href="./styles.css" />
 </html>
