--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 <html>
   <body>
     <h1 class="title">Discount Calculator</h1>
-    <div class="grid-container">
         <h3 class= "">Original Price $: <input maxlength="2" type="number" id ="original_price" min="0" value =""></input></h3>
-        <h3 class= "">Discount: <input maxlength="3" type="number" id ="" min="0" max ="100" value ="discount_percentage"></input>%</h3>
+        <h3 class= "">Discount: <input maxlength="3" type="number" id ="discount_percentage" min="0" max ="100" value =""></input>%</h3>
 
         <button type="button" class="btn btn-primary btn-lg" onclick="discount_calculation()">Calculate</button>
 
         <h3 >New Price: $ <p id = new_price> </p> </h3>
-        <h3 class= "">You Save: $ </h3>
-       
-    </div>
-    <!-- <div class="grid-container"></div> -->
-    <h2 id="type-s"></h2>
+        <h3 class= "">You Save: $<p id = you_save> </p> </h3>
   </body>
   <script src="script.js"></script>
   <link rel="stylesheet" href="./styles.css" />
